--- a/balloon.html
+++ b/balloon.html
@@ -218,7 +218,7 @@
     </fieldset>
   </div>
   <hr>
-  <div id="test" class="test">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, repudiandae.</div>
+  <div id="test" class="test">移动鼠标到这里.</div>
   <script>
     var t = document.getElementById('test');
     var ta = document.getElementById('ta');
