--- a/sliding-image/sliding-image.html
+++ b/sliding-image/sliding-image.html
@@ -30,15 +30,15 @@
     }
     .one div:nth-child(1), .two div:nth-child(1), .three div:nth-child(1), .four div:nth-child(1) {
       z-index: 3;
-      background-image: url(./left.jpg);
+      background-image: url(https://s2.ax1x.com/2019/06/05/VUB5xx.jpg);
     }
     .one div:nth-child(2), .two div:nth-child(2), .three div:nth-child(2), .four div:nth-child(2) {
       z-index: 2;
-      background-image: url(./middle.jpg);
+      background-image: url(https://s2.ax1x.com/2019/06/05/VUBoM6.jpg);
     }
     .one div:nth-child(3), .two div:nth-child(3), .three div:nth-child(3), .four div:nth-child(3) {
       z-index: 1;
-      background-image: url(./right.jpg);
+      background-image: url(https://s2.ax1x.com/2019/06/05/VUB4R1.jpg);
     }
     .one div {
       background-position: 0;
